<resources>
    <string name="app_name">AD_Actividad_3b</string>
    <string name="button_text">Guardar preferencias</string>
    <string name="button2_text">Recuperar preferencias</string>
    <string name="action_settings">Settings</string>
    <string name="nom">Nom</string>
    <string name="dni">DNI</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="sexo">Sexo:</string>
</resources>
